--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,10 @@ repositories {
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation('org.springframework.boot:spring-boot-starter-webflux')
+
+	runtimeOnly('com.h2database:h2')
+	compileOnly('org.projectlombok:lombok')
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	testImplementation('io.projectreactor:reactor-test')
 	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
 }
